--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="sub" id="site-sub">點開分類查看子分類</div>
       </div>
       <div class="lang-toggle" role="group" aria-label="language switch">
-        <button id="btn-zh" class="btn" aria-pressed="true">中文</button>
+        <button id="btn-zh" class="btn" aria-pressed="true">ZH</button>
         <button id="btn-en" class="btn" aria-pressed="false">EN</button>
       </div>
     </div>
@@ -110,14 +110,14 @@
 
   <main class="wrap">
     <div id="accordion" class="section"></div>
-    <div class="footer" id="footer-text">© 2025- 華神生活地圖</div>
+    <div class="footer" id="footer-text">© 2025 Allen Liu</div>
   </main>
 
   <script>
     // ===== A) 多語字典（文字內容不變） =====
     const i18n = {
       zh: {
-        title: '華神生活地圖', sub: '點開分類查看子分類', footer: '© 2025- 華神生活地圖',
+        title: '華神生活地圖', sub: '點開分類查看子分類', footer: '© 2025 Allen Liu',
         sections: { food:'餐飲美食', medical:'診所醫院', life:'購物 / 生活服務', traffic:'汽機車養護與接送', fun:'育樂休閒' },
         subs: {
           breakfast:'早餐', snacks:'小吃', world:'異國料理', late:'宵夜', cafe:'甜點咖啡', group:'聚餐地點',
@@ -129,7 +129,7 @@
         open:'開啟連結', pending:'待補連結'
       },
       en: {
-        title: 'CES Life Map', sub: 'Tap a category to view subcategories', footer: '© 2025- CES Life Map',
+        title: 'CES Life Map', sub: 'Tap a category to view subcategories', footer: '© 2025 Allen Liu',
         sections: { food:'Food & Dining', medical:'Clinics & Hospitals', life:'Shopping / Services', traffic:'Vehicles & Transport', fun:'Leisure & Recreation' },
         subs: {
           breakfast:'Breakfast', snacks:'Street Food', world:'International', late:'Late-night', cafe:'Dessert & Coffee', group:'Group Dining',
