--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         subs: {
           breakfast:'早餐', snacks:'小吃', world:'異國料理', late:'宵夜', cafe:'甜點咖啡', group:'聚餐地點',
           hospital:'醫院', ped:'小兒科診所', dental:'牙醫診所', tcm:'中醫診所', multi:'骨科 / 內科 / 肝膽腸胃專科 / 皮膚科診所', ent_obgyn:'婦科 / 耳鼻喉科診所',
-          shopping:'購物雜物', idhair:'證件件照 / 剪燙髮',
+          shopping:'購物雜物', idhair:'證件照 / 剪燙髮',
           vehicle:'汽機車養護與接送',
           outdoor:'室外娛樂', indoor:'室內娛樂'
         },
